force-app/main/default/objects/JCRecordDetailSetting__mdt/JCRecordDetailSetting__mdt.object-meta.xml
<CustomObject>
    <label>JC Record Detail Setting</label>
    <pluralLabel>JC Record Detail Settings</pluralLabel>
</CustomObject>