force-app/main/default/objects/JCRecordDetailSetting__mdt/fields/Accordion__c.field-meta.xml
<CustomField>
    <fullName>Accordion__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Accordion</label>
    <type>Checkbox</type>
</CustomField>