force-app/main/default/objects/JCRecordDetailSetting__mdt/fields/Columns__c.field-meta.xml
<CustomField>
    <fullName>Columns__c</fullName>
    <defaultValue>&quot;2&quot;</defaultValue>
    <label>Columns</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>