force-app/main/default/objects/JCRecordDetailSetting__mdt/fields/Default_Open__c.field-meta.xml
<CustomField>
    <fullName>Default_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the accordion is open by default or not</description>
    <inlineHelpText>Specifies whether the accordion is open by default or not</inlineHelpText>
    <label>Default Open</label>
    <type>Checkbox</type>
</CustomField>