force-app/main/default/objects/JCRecordDetailSetting__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description
	>This is a comma separate string of the fields to display. The fields should be the api name of the fields</description>
    <inlineHelpText
	>This is a comma separate string of the fields to display. The fields should be the api name of the fields</inlineHelpText>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>