force-app/main/default/objects/JCRecordDetailSetting__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description
	>When related to a related tab setting, this field controls in what order this section will appear in the tabs</description>
    <inlineHelpText
	>When related to a related tab setting, this field controls in what order this section will appear in the tabs</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>