force-app/main/default/objects/JCRecordDetailSetting__mdt/fields/Page_Layout__c.field-meta.xml
<CustomField>
    <fullName>Page_Layout__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <description
	>This specifies which fields to display based on page layout. If none is selected you must specify the specific fields to display in the Fields selection Full - The full layout corresponds to the fields on the record detail page. Compact - The compact layout corresponds to the fields on the highlights panel at the top of the record.</description>
    <inlineHelpText
	>This specifies which fields to display based on page layout. If none is selected you must specify the specific fields to display in the Fields selection Full - The full layout corresponds to the fields on the record detail page. Compact - The compact layo</inlineHelpText>
    <label>Page Layout</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Compact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>