force-app/main/default/objects/JCRecordDetailSetting__mdt/fields/Related_Tabs_Setting__c.field-meta.xml
<CustomField>
    <fullName>Related_Tabs_Setting__c</fullName>
    <label>Related Tabs Setting</label>
    <referenceTo>JCRelatedTabsSetting__mdt</referenceTo>
    <relationshipLabel>JC Record Detail Settings</relationshipLabel>
    <relationshipName>JC_Record_Detail_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>