force-app/main/default/objects/JCRecordDetailSetting__mdt/fields/Section_Title__c.field-meta.xml
<CustomField>
    <fullName>Section_Title__c</fullName>
    <label>Section Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>