force-app/main/default/objects/JCRecordDetailSetting__mdt/validationRules/Specify_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_Fields</fullName>
    <active>true</active>
    <errorConditionFormula
	>ISPICKVAL(Page_Layout__c , &apos;None&apos;) &amp;&amp; Fields__c == null</errorConditionFormula>
    <errorDisplayField>Fields__c</errorDisplayField>
    <errorMessage>Fields must be filled out if Page Layout is set to &apos;None&apos;.</errorMessage>
</ValidationRule>